improved box shadow

--- a/style/style.css
+++ b/style/style.css
@@ -25,7 +25,7 @@
 
     padding-top: 20px;
     margin-left: 80px;
-    color: rgb(7, 131, 180);
+    color: rgb(11, 170, 244);;
 }
 
 .navbar-main-menu {
@@ -185,8 +185,7 @@ input {
 }
 
 .card {
-    box-shadow: 3px 3px 3px 3px #575656;
-    border-radius: 4px;
+    box-shadow: 5px -5px 15px #e8e7e7, -5px 5px 15px #efeeee;    border-radius: 4px;
     width: 180px;
     height: 210px;
 
@@ -219,6 +218,6 @@ input {
 }
 
 input[type=button] {
-    box-shadow: 3px 3px rgb(6, 17, 79);
+    box-shadow: 5px -5px 15px #e8e7e7, -5px 5px 15px #efeeee;    border-radius: 4px;
     cursor: pointer;
 }
