change in style

--- a/style/style.css
+++ b/style/style.css
@@ -19,7 +19,7 @@
 }
 
 .title-text-navbar {
-    font-size: 32px;
+    font-size: 40px;
     font-weight: bolder;
     display: inline-block;
 
@@ -49,6 +49,7 @@ input {
     width: 115px;
     border-radius: 3px;
     height: 35px;
+    font-size: 13px;
     background-color: rgb(11, 170, 244);
     color: white;
     border: none;
@@ -72,28 +73,28 @@ input {
 
 /* dropdown menu style */
 #dropdown-button:hover #dropdown-menu-content {
-
+    
     display: flex;
     position: absolute;
     flex-direction: column;
-
-
+    
+    transition: ease-in;
     background-color: black;
     margin-top: -29px;
     left: 0;
-    background-color: aliceblue;
-
+    background-color: rgb(180, 184, 187);
+    
     width: auto;
 }
 
 #dropdown-button:hover .dropdown-text {
-
+    
     cursor: pointer;
 }
 
 #dropdown-menu-content a {
     text-decoration: none;
-
+    
     background-color: rgb(255, 255, 255);
     text-align: center;
     display: inline-block;
@@ -111,7 +112,15 @@ input {
     background-color: aliceblue;
     border-radius: 1px;
     box-shadow: 1px 1px 1px 1px #f8eded;
-
+    
+}
+#dropdown-menu-content a:hover {
+    color:red;
+    
+    background-color: aliceblue;
+    border-radius: 1px;
+    box-shadow: 1px 1px 1px 1px #f8eded;
+    
 }
 
 #dropdown-button {
@@ -154,7 +163,7 @@ input {
     margin: 20px 40px;
     padding: 5px 25px;
     width: 135px;
-
+    
     border-radius: 3px;
     height: 40px;
     background-color: rgb(11, 170, 244);
@@ -175,49 +184,51 @@ input {
 
 /* main content card styling */
 
-.main-content-cards {
+.card-container {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     margin-top: 90px;
-    margin-bottom: 90px;
-
+    /* margin-bottom: 90px; */
+    
 }
 
 .card {
     box-shadow: 5px -5px 15px #e8e7e7, -5px 5px 15px #efeeee;    border-radius: 4px;
-    width: 180px;
-    height: 210px;
+    width: 220px;
+    height: 250px;
 
     background-color: rgb(11, 170, 244);
     display: inline-block;
 }
 
 .card-heading {
-
-    font-size: 22px;
+    
+    font-size: 25px;
     display: inline-block;
     font-weight: bold;
-    margin: 6px 12px 4px 11px;
-
-
+    margin: 6px 12px 6px 11px;
+    
+    
 }
 
 .card-heading i {
-    margin: 23px 70px 15px 3px;
+    margin: 23px 190px 15px 3px;
     font-size: 27px;
 }
 
 .card-text {
 
-
+    
     margin: 1px 11px;
-
+    font-size: 18px;
+    
     display: inline-block;
-
+    
 }
 
 input[type=button] {
     box-shadow: 5px -5px 15px #e8e7e7, -5px 5px 15px #efeeee;    border-radius: 4px;
     cursor: pointer;
+    font-size: 13px;
 }
